Fix position form spacing, change ship colors

--- a/src/style.css
+++ b/src/style.css
@@ -119,7 +119,7 @@ input[type="button"]:active {
   grid-column-start: 11;
 }
 #ship-info {
-  width:200px;
+  width:230px;
 }
 #ship-message {
   padding-bottom: 20px;
@@ -132,7 +132,7 @@ input[type="button"]:active {
   padding-bottom: 10px;
 }
 #ship-position {
-  width: 80px;
+  width: 100px;
 }
 #submit-btn {
   grid-column-start: 2;
@@ -224,7 +224,7 @@ input[type="button"]:active {
   left: 0;
   text-align: left;
   padding: 10px;
-  width: 200px;
+  width: 230px;
 }
 
 /* SPACE FORMATTING */
